# backend_wagtail-inform

./: .gitignore  Procfile  README.md  db.sqlite3  manage.py  pyproject.toml  req.txt  requirements.txt
articles/: blocks.py  content_filters.py  feeds.py  models.py  queries.py  rewriters.py  settings.py  wagtail_hooks.py  widgets.py
articles/migrations/: 0001_initial.py
home/: models.py
home/migrations/: 0001_initial.py
home/templates/admin/: change_form.html
inform/: urls.py  wagtail.py  wsgi.py
inform/settings/: base.py  dev.py  production.py
inform/templates/: base.html
inform/templates/wagtailimages/images/: pagination_nav_custom.html  results.html
