[tool.poetry]
name = "tmf-inform-cms2"
version = "2.0.0"
description = ""
authors = ["Ellis Percival <ellis.percival@ggmr.co.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = ">=3.0,<4.0"
wagtail = ">=2.14,<2.17"
wagtail-grapple = {git = "https://github.com/przemub/wagtail-grapple-flyte.git", rev = "feature/plural_query_field_limit"}
tqdm = "^4.64.0"
lxml = "^4.8.0"
pydantic = "^1.9.0"
backoff = "^1.11.1"
django-storages = "^1.12.3"
boto3 = "^1.21.35"
whitenoise = "^6.0.0"
PyYAML = "^6.0"
django-iam-dbauth = "^0.1.4"
elasticsearch = ">=7.0.0,<7.14"
elasticsearch-dsl = ">=7.0.0,<8"
psycopg2 = {version = "2.9.3", optional = true}
phpserialize = "^1.3"
humanize = "^4.0.0"
shortcodes = "^5.4.0"
arrow = "^1.2.2"
wagtail-transfer = {git = "https://gitlab.com/ggmr/wagtail-transfer.git", rev = "custom-release-1"}
sentry-sdk = "^1.5.9"
django-wagtail-feeds = "^0.1.0"
django-health-check = "^3.16.5"
wagtail-color-panel = "^1.3.1"
wagtail-icon-picker = {git = "https://github.com/przemub/wagtail-icon-picker.git", rev = "tmf-release"}
django-graphiql-debug-toolbar = {git = "https://github.com/Chihiro-Software/django-grapple-graphiql-debug-toolbar", rev = "main"}
cryptography = {version = "^36.0.2", optional = true}
anyio = "^3.5.0"
httpx = "^0.22.0"
wagtail-orderable = "^1.1.0"
requests-aws4auth = "^1.1.2"
dj-database-url = "^1.2.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
ipython = ">=8.3.0"
mypy = "^0.942"
types-requests = "^2.27.16"
types-PyYAML = "^6.0.5"
ipdb = "^0.13.9"
django-cors-headers = "^3.11.0"
pytest-django = "^4.5.2"
hypothesis = "^6.46.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
prod = ["psycopg2", "sentry-sdk", "cryptography"]
